# applyhome-alert-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: applyhome-alert.yml
deploy/: applyhome-alert.crontab
docs/: github-actions.md  ops.md
docs/plans/: 2026-04-29-applyhome-alert-bot-mvp.md
scripts/: run_alert.sh
src/applyhome_alert/: config.py  fetcher.py  filters.py  main.py  models.py  notifier.py  parser.py  store.py
tests/: test_config.py  test_fetcher.py  test_filters.py  test_main.py  test_notifier.py  test_parser.py  test_smoke.py  test_store.py  test_workflow_smoke.py
tests/fixtures/: applyhome_table.html  detail_inquiry.html  detail_price_table.html  detail_sale_price_table.html
