[project]
name = "applyhome-alert-bot"
version = "0.1.0"
description = "Alert bot for capital-region non-ranked apartment subscriptions on ApplyHome"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13.0",
  "playwright>=1.52.0",
  "requests>=2.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applyhome_alert"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
